Backend Typescript install

--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,9 @@
     "@types/node": "^22.13.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.4.1",
+    "prisma": "^6.4.1"
   }
 }
